Version 2.4.0
~~~~~~~~~~~~~
* Post DiFX-2.3
* Support axis offset argument for ANTENNAs
* Adapt to string-based networkPort in support of raw sockets

Version 2.3.0
~~~~~~~~~~~~~
* Suport for VDIFL added
* Move some NRAO-specific utilities outside this package
* vexpeek: new --format and --diskusage options
* Version for DiFX-2.3, Dec 20, 2013

Version 2.2.0
~~~~~~~~~~~~~
* vexpeek: --bands mode
* Support writing of .machines file
* Improved support for FAKE
* Verify input files do not have DOS end of line characters
* Populate difxLabel in difxio->.calc and in .joblist
* Generate systematic threadId
* Verify all or none of the ephemeris parameters are provided
* c++11 compliance
* Don't allow subintNS greater than about 1 second (to ward off MODE errors)
* Remove "using namespace std" from .h files; goal is to remove them from .cpp files in time
* Track oversample value in channel structure; move checking downstream to
  more relevant code.
* Add a few features (ephemDeltaT, ephemStellarAber, ephemClockError) useful in
  exploring spacecraft ephemeris but probably not useful for operations
* change zoom band definition to always be USB (specify lower edge freq)
* Reorder Mark5B tracks to accomodate bitstream masks
* Consider two sources within 1 mas of each other to be the same
* Added separate mjdStart and mjdStop parameters for each antenna
* Version for DiFX-2.2, May 31, 2013

Version 2.1.0
~~~~~~~~~~~~~
* Allowed zoom bands to be used with profile mode also
* Version for DiFX-2.1, May 14, 2012

Version 2.0.2
~~~~~~~~~~~~~
* Bug fix: when sorting events, round to nearest 0.1 second
* Bug fix: order of operations in computing zoom channels: don't overflow integers
* Change parameters to be better optimized for larger bandwidths (at marginal, if any, impact to small bandwidths)
* Reimplement tweak integration time
* Fix zoom bands when statting with different bandwidths.  WFB gets a beer for this one!